--- a/_posts/2026-02-23-coefficient-of-variation.html
+++ b/_posts/2026-02-23-coefficient-of-variation.html
@@ -7520,8 +7520,8 @@ a.anchor-link {
 <h2 id="Coefficient-of-Variation-(CV)---relative-standard-deviation">Coefficient of Variation (CV) - relative standard deviation<a class="anchor-link" href="#Coefficient-of-Variation-(CV)---relative-standard-deviation">¶</a></h2><p>$CV=\frac{StdDev}{Mean}$</p>
 <p>The <em>Coefficient of Variation</em> is a relative measure of variability. It is calculated by dividing the standard deviation by the mean.
 Unlike standard deviation, CV is a standardized and unitless measure which makes it useful for comparison. Comparing the standard deviations across data sets is meaningless, while comparing coefficients of variation is not.</p>
-<p>Population Formula: $C_V=\frac{\sigma}{\mu}$</p>
-<p>Sample Formula: $\^{C_V}=\frac{s}{\bar{x}}$</p>
+<p>Population Formula: $C_V=\sigma/\mu$</p>
+<p>Sample Formula: $\widehat{C_V}=s/\bar{X}$</p>
 </div>
 </div>
 </div>
