--- a/_posts/2026-02-26-covariance.html
+++ b/_posts/2026-02-26-covariance.html
@@ -7524,7 +7524,7 @@ a.anchor-link {
 <li>negative: indicating they change in opposite directions</li>
 <li>or zero: indicating absolute independence from each other</li>
 </ul>
-<p><strong>Formula</strong>: $cov(X,Y)=\frac{\sum_{i=1}^{n}{(X-\bar{X})(Y-\bar{Y})}}{n-1}$</p>
+<p><strong>Formula</strong>: $cov(X,Y)=\frac{\sum_{i=1}^{n}{(X_i-\bar{X})(Y_i-\bar{Y})}}{n-1}$</p>
 <p>For populations n-1 in the denominator changes to the whole population size N.</p>
 </div>
 </div>
